// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should display full map when there are no places 1`] = `
<div
  className="app"
>
  <header
    className="app-header"
  >
    <img
      alt="logo"
      className="app-logo-static"
      src="google_places_logo.png"
    />
    <h1
      className="app-title"
    >
      Welcome to Places
    </h1>
    <SearchPlacesInput
      handleChange={[Function]}
      handleSubmit={[Function]}
    />
  </header>
  <div
    className="row"
  >
    <div
      className="no-padding col-md-12"
    >
      <div
        className="map"
      >
        <div
          className="init-loading"
        >
          <img
            alt="logo"
            className="app-logo"
            src="loading_icon.png"
          />
          <h5>
            Initializing your location...
          </h5>
        </div>
      </div>
    </div>
    <div
      className="no-padding "
    >
      <PlacesList
        displayInfoFromListItem={[Function]}
        places={Array []}
      />
    </div>
  </div>
</div>
`;

exports[`it should display partial map when there are places 1`] = `
<div
  className="app"
>
  <header
    className="app-header"
  >
    <img
      alt="logo"
      className="app-logo-static"
      src="google_places_logo.png"
    />
    <h1
      className="app-title"
    >
      Welcome to Places
    </h1>
    <SearchPlacesInput
      handleChange={[Function]}
      handleSubmit={[Function]}
    />
  </header>
  <div
    className="row"
  >
    <div
      className="no-padding col-md-8"
    >
      <div
        className="map"
      >
        <div
          className="init-loading"
        >
          <img
            alt="logo"
            className="app-logo"
            src="loading_icon.png"
          />
          <h5>
            Initializing your location...
          </h5>
        </div>
      </div>
    </div>
    <div
      className="no-padding col-md-4"
    >
      <PlacesList
        displayInfoFromListItem={[Function]}
        places={
          Array [
            Object {},
            Object {},
            Object {},
          ]
        }
      />
    </div>
  </div>
</div>
`;

exports[`renders App component as expected 1`] = `
<div
  className="app"
>
  <header
    className="app-header"
  >
    <img
      alt="logo"
      className="app-logo-static"
      src="google_places_logo.png"
    />
    <h1
      className="app-title"
    >
      Welcome to Places
    </h1>
    <SearchPlacesInput
      handleChange={[Function]}
      handleSubmit={[Function]}
    />
  </header>
  <div
    className="row"
  >
    <div
      className="no-padding col-md-12"
    >
      <div
        className="map"
      >
        <div
          className="init-loading"
        >
          <img
            alt="logo"
            className="app-logo"
            src="loading_icon.png"
          />
          <h5>
            Initializing your location...
          </h5>
        </div>
      </div>
    </div>
    <div
      className="no-padding "
    >
      <PlacesList
        displayInfoFromListItem={[Function]}
        places={Array []}
      />
    </div>
  </div>
</div>
`;
